# zero2prod

./: Cargo.toml  Dockerfile  spec.yml  tmp_api_key.txt
configuration/: base.yaml  production.yaml
migrations/: 20220921004418_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh  start_pgadmin.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
